kubernetes/deployment.yaml
# Managed by Argo CD Gitops
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hotstar-clone

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hotstar

  template:
    metadata:
      labels:
        app: hotstar

    spec:
      containers:
      - name: hotstar
        image: 634737373070.dkr.ecr.ap-south-1.amazonaws.com/hotstar-clone:68
        ports:
        - containerPort: 80
       
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
