kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hotstar-clone

spec:
  selector:
    app: hotstar

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
