kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hotstar-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hotstar

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 80
